--- a/index.html
+++ b/index.html
@@ -120,10 +120,203 @@
           </div>
         </div>
         <div class="video-media">
-          <iframe src="https://www.youtube.com/embed/KYTpKMjn1UA?controls=0"
-            title="YouTube video player" frameborder="0"
+          <iframe src="https://www.youtube.com/embed/KYTpKMjn1UA?controls=0" title="YouTube video player"
+            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
+        </div>
+      </div>
+    </section>
+    <section class="programs">
+      <div class="container">
+        <div class="section-header">
+          <div class="section-header__p">
+            <div class="section-header__p__line"></div>
+            <p class="section-header__p__text">Программы</p>
+          </div>
+          <div class="section-header__h">
+            <h1>Наши программы обучения:</h1>
+          </div>
+        </div>
+        <div class="programs-blocks">
+          <div class="programs-block">
+            <div class="programs-block__header">
+              <div class="programs-block__header__price">
+                <span><span class="price-num">690</span> руб.</span>
+              </div>
+              <div class="programs-block__header__title">
+                <h3>7 дней доступа ко
+                  всем онлайн курсам</h3>
+              </div>
+            </div>
+            <ul class="programs-block__includes">
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Проверочный тест</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Курсы от А1 до В1</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Интересные упражнения</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Подсказки экспертов</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Разговорный клуб</p>
+              </li>
+            </ul>
+            <div class="programs-block__panel">
+              <div class="programs-block__panel__button">
+                <button class="button--primary">Получить</button>
+              </div>
+              <div class="programs-block__panel__link">
+                <a href="#"><img src="img/programs/play.svg" alt="">
+                  Смотреть презентацию</a>
+              </div>
+            </div>
+          </div>
+          <div class="programs-block">
+            <div class="programs-block__header">
+              <div class="programs-block__header__price">
+                <span>от <span class="price-num">1190</span>
+                  руб./урок</span>
+              </div>
+              <div class="programs-block__header__title">
+                <h3>Индивидуальные уроки
+                  по Skype</h3>
+              </div>
+            </div>
+            <ul class="programs-block__includes">
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Бесплатный доступ к онлайн-порталу</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Любой уровень за 32 урока</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Вы выбираете преподавателя</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Вы выбираете время занятий</p>
+              </li>
+            </ul>
+            <div class="programs-block__panel">
+              <div class="programs-block__panel__button">
+                <button class="button--primary">Записаться</button>
+              </div>
+              <div class="programs-block__panel__link">
+                <a href="#"><img src="img/programs/play.svg" alt="">
+                  Смотреть презентацию</a>
+              </div>
+            </div>
+          </div>
+          <div class="programs-block">
+            <div class="programs-block__header">
+              <div class="programs-block__header__price">
+                <span>от <span class="price-num">15000</span> руб./курс</span>
+              </div>
+              <div class="programs-block__header__title">
+                <h3>Турецкий в группе онлайн
+                  за 3 месяца</h3>
+              </div>
+            </div>
+            <ul class="programs-block__includes">
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">24 онлайн-занятия по 90 минут</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Интерактивные учебные материалы</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Бесплатный доступ к онлайн-порталу</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Закрытый форум для общения</p>
+              </li>
+            </ul>
+            <div class="programs-block__panel">
+              <div class="programs-block__panel__button">
+                <button class="button--primary">Записаться</button>
+              </div>
+              <div class="programs-block__panel__link">
+                <a href="#"><img src="img/programs/play.svg" alt="">
+                  Смотреть презентацию</a>
+              </div>
+            </div>
+          </div>
+          <div class="programs-block">
+            <div class="programs-block__header">
+              <div class="programs-block__header__price">
+                <span>Корпоративное обучение</span>
+              </div>
+              <div class="programs-block__header__title">
+                <h3>Специальный курс обучения сотрудников</h3>
+              </div>
+            </div>
+            <ul class="programs-block__includes">
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Обучение по уникальной программе TÖMER</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Оригинальные учебные материалы</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Интерактивные материалы в личном кабинете</p>
+              </li>
+              <li class="programs-block__includes__item">
+                <img src="img/programs/Check.svg" alt="Includes check" class="programs-block__includes__icon">
+                <p class="programs-block__includes__text">Скидка на индивидуальные занятия</p>
+              </li>
+            </ul>
+            <div class="programs-block__panel">
+              <div class="programs-block__panel__button">
+                <button class="button--primary">Подробнее</button>
+              </div>
+              <div class="programs-block__panel__link">
+                <a href="#"><img src="img/programs/play.svg" alt="">
+                  Смотреть презентацию</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="banner1">
+      <div class="banner1-bg"></div>
+      <div class="container banner1-container">
+        <div class="banner1__inner">
+          <div class="banner1-photo">
+            <img src="img/banner1/banner1-photo.jpg" alt="Banner certificate">
+          </div>
+          <div class="banner1-text">
+            <div class="banner1-text__head">
+              <h2>ДИАЛОГ - лицензированное образовательное учреждение</h2>
+            </div>
+            <div class="banner1-text__p">
+              <p>Имеем лицензию министерства образования РФ и специализируемся только на преподавании турецкого языка и
+                русского языка для турок.</p>
+            </div>
+            <div class="banner1-text__button">
+              <button class="button--primary">Записаться на пробный урок</button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
