2 блока, адаптив, слайдер

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Курсы турецкого языка "Диалог"</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="shortcut icon" href="img/shortcut-icon.png" type="image/png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="js/slick.min.js"></script>
 </head>
 
 <body>
@@ -320,9 +322,69 @@
         </div>
       </div>
     </section>
+    <section class="partners">
+      <div class="container">
+        <div class="section-header">
+          <div class="section-header__p">
+            <div class="section-header__p__line"></div>
+            <p class="section-header__p__text">Партнеры</p>
+          </div>
+          <div class="section-header__h">
+            <h1>Наши услуги оценили:</h1>
+          </div>
+        </div>
+        <div class="partners__inner partners-slider">
+          <div class="partners-item">
+            <div class="partners-item__logo">
+              <img src="img/partners/partner1.png" alt="Partner Logo">
+            </div>
+          </div>
+          <div class="partners-item">
+            <div class="partners-item__logo">
+              <img src="img/partners/partner2.png" alt="Partner Logo">
+            </div>
+          </div>
+          <div class="partners-item">
+            <div class="partners-item__logo">
+              <img src="img/partners/partner3.png" alt="Partner Logo">
+            </div>
+          </div>
+          <div class="partners-item">
+            <div class="partners-item__logo">
+              <img src="img/partners/partner4.png" alt="Partner Logo">
+            </div>
+          </div>
+          <div class="partners-item">
+            <div class="partners-item__logo">
+              <img src="img/partners/partner5.png" alt="Partner Logo">
+            </div>
+          </div>
+          <div class="partners-item">
+            <div class="partners-item__logo">
+              <img src="img/partners/partner6.png" alt="Partner Logo">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="banner2">
+      <div class="container banner2-container">
+        <div class="banner2__inner">
+          <div class="banner2-text">
+            <div class="banner2-text__head">
+              <h1>Подпишись на 10 бесплатных уроков «Турецкий базар» в email рассылке для комфортного общения</h1>
+            </div>
+          </div>
+          <div class="banner2-button">
+            <button class="button--primary">Подписаться</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer"></footer>
   <script src="js/main.js"></script>
+  <script src="js/slider.js""></script>
 </body>
 
 </html>
