--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <li><a href="plonq.html" class="burger__link">Контакты</a></li>
               </ul>
               <div class="burger-menu__nav__button">
-                <button class="button--primary">
+                <button class="button--primary" data-modal>
                   <img src="img/header/btn-phone.svg" alt="phone icon button" class="header-main__nav__callIcon">
                   <span>Заказать звонок</span></button>
               </div>
